--- a/biology.html
+++ b/biology.html
@@ -96,7 +96,7 @@
     </section>
     <section class="gallery">
     <div class="card">
-      <img srcbiology fair book/3.jpeg" alt="Page 3">
+      <img src="biology fair book/3.jpeg" alt="Page 3">
       <div class="caption">Page 3</div>
     </div>
   </section>
