Added page 19 in biology

--- a/biology.html
+++ b/biology.html
@@ -190,6 +190,12 @@
       <div class="caption">Page 18</div>
     </div>
   </section>
+    <section class="gallery">
+    <div class="card">
+      <img src="biology fair book/19.jpeg" alt="Page 19">
+      <div class="caption">Page 19</div>
+    </div>
+  </section>
   <a href="index.html" class="back-btn">← Back to Home</a>
 
   <footer>
