--- a/biology.html
+++ b/biology.html
@@ -55,8 +55,8 @@
       width: max-content;
       margin: 1.5rem auto;
       padding: 0.6rem 1.5rem;
-      background-color: #1e3a8a;
-      color: white;
+      background-color: white;
+      color: #1e3a8a;
       text-decoration: none;
       border-radius: 8px;
       transition: background-color 0.3s ease;
@@ -65,6 +65,16 @@
     .back-btn:hover {
       background-color: #374bb3;
     }
+
+     .lazy-img {
+  filter: blur(10px);
+  opacity: 0;
+  transition: filter 0.5s ease, opacity 0.5s ease;
+}
+.lazy-img.loaded {
+  filter: blur(0);
+  opacity: 2;
+}
 
     footer {
       text-align: center;
@@ -84,119 +94,126 @@
 
   <section class="gallery">
     <div class="card">
-      <img src="biology fair book/1.jpeg" alt="Page 1">
+      <img src="biology fair book/1.jpeg" loading="lazy" class="lazy-img" alt="Page 1">
       <div class="caption">Page 1</div>
     </div>
     </section>
     <section class="gallery">
     <div class="card">
-      <img src="biology fair book/2.jpeg" alt="Page 2">
+      <img src="biology fair book/2.jpeg" loading="lazy" class="lazy-img" alt="Page 2">
       <div class="caption">Page 2</div>
     </div>
     </section>
     <section class="gallery">
     <div class="card">
-      <img src="biology fair book/3.jpeg" alt="Page 3">
+      <img src="biology fair book/3.jpeg" loading="lazy" class="lazy-img" alt="Page 3">
       <div class="caption">Page 3</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="biology fair book/4.jpeg" alt="Page 4">
+      <img src="biology fair book/4.jpeg" loading="lazy" class="lazy-img" alt="Page 4">
       <div class="caption">Page 4</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="biology fair book/5.jpeg" alt="Page 5">
+      <img src="biology fair book/5.jpeg" loading="lazy" class="lazy-img" alt="Page 5">
       <div class="caption">Page 5</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="biology fair book/6.jpeg" alt="Page 6">
+      <img src="biology fair book/6.jpeg" loading="lazy" class="lazy-img" alt="Page 6">
       <div class="caption">Page 6</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="biology fair book/7.jpeg" alt="Page 7">
+      <img src="biology fair book/7.jpeg" loading="lazy" class="lazy-img" alt="Page 7">
       <div class="caption">Page 7</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="biology fair book/8.jpeg" alt="Page 8">
+      <img src="biology fair book/8.jpeg" loading="lazy" class="lazy-img" alt="Page 8">
       <div class="caption">Page 8</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="biology fair book/9.jpeg" alt="Page 9">
+      <img src="biology fair book/9.jpeg" loading="lazy" class="lazy-img" alt="Page 9">
       <div class="caption">Page 9</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="biology fair book/10.jpeg" alt="Page 10">
+      <img src="biology fair book/10.jpeg" loading="lazy" class="lazy-img" alt="Page 10">
       <div class="caption">Page 10</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="biology fair book/11.jpeg" alt="Page 11">
+      <img src="biology fair book/11.jpeg" loading="lazy" class="lazy-img" alt="Page 11">
       <div class="caption">Page 11</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="biology fair book/12.jpeg" alt="Page 12">
+      <img src="biology fair book/12.jpeg" loading="lazy" class="lazy-img" alt="Page 12">
       <div class="caption">Page 12</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="biology fair book/13.jpeg" alt="Page 13">
+      <img src="biology fair book/13.jpeg" loading="lazy" class="lazy-img" alt="Page 13">
       <div class="caption">Page 13</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="biology fair book/14.jpeg" alt="Page 14">
+      <img src="biology fair book/14.jpeg"  loading="lazy" class="lazy-img"alt="Page 14">
       <div class="caption">Page 14</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="biology fair book/15.jpeg" alt="Page 15">
+      <img src="biology fair book/15.jpeg" loading="lazy" class="lazy-img" alt="Page 15">
       <div class="caption">Page 15</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="biology fair book/16.jpeg" alt="Page 16">
+      <img src="biology fair book/16.jpeg" loading="lazy" class="lazy-img" alt="Page 16">
       <div class="caption">Page 16</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="biology fair book/17.jpeg" alt="Page 17">
+      <img src="biology fair book/17.jpeg" loading="lazy" class="lazy-img" alt="Page 17">
       <div class="caption">Page 17</div>
     </div>
   </section>
   <section class="gallery">
     <div class="card">
-      <img src="biology fair book/18.jpeg" alt="Page 18">
+      <img src="biology fair book/18.jpeg" loading="lazy" class="lazy-img" alt="Page 18">
       <div class="caption">Page 18</div>
     </div>
   </section>
     <section class="gallery">
     <div class="card">
-      <img src="biology fair book/19.jpeg" alt="Page 19">
+      <img src="biology fair book/19.jpeg" loading="lazy" class="lazy-img" alt="Page 19">
       <div class="caption">Page 19</div>
     </div>
   </section>
   <a href="index.html" class="back-btn">← Back to Home</a>
+
+    <script> document.querySelectorAll('img.lazy-img').forEach(img => {
+  img.addEventListener('load', () => {
+    img.classList.add('loaded');
+  });
+});
+</script>
 
   <footer>
     &copy; 2025 Biology | Fair Book Gallery
