--- a/biology.html
+++ b/biology.html
@@ -55,8 +55,8 @@
       width: max-content;
       margin: 1.5rem auto;
       padding: 0.6rem 1.5rem;
-      background-color: white;
-      color: #1e3a8a;
+      background-color: #1e3a8a;
+      color: white;
       text-decoration: none;
       border-radius: 8px;
       transition: background-color 0.3s ease;
