--- a/biology.html
+++ b/biology.html
@@ -196,6 +196,30 @@
       <div class="caption">Page 19</div>
     </div>
   </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="biology fair book/20.jpeg" loading="lazy" class="lazy-img" alt="Page 20">
+      <div class="caption">Page 20</div>
+    </div>
+  </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="biology fair book/21.jpeg" loading="lazy" class="lazy-img" alt="Page 21">
+      <div class="caption">Page 21</div>
+    </div>
+  </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="biology fair book/22.jpeg" loading="lazy" class="lazy-img" alt="Page 22">
+      <div class="caption">Page 22</div>
+    </div>
+  </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="biology fair book/23.jpeg" loading="lazy" class="lazy-img" alt="Page 23">
+      <div class="caption">Page 23</div>
+    </div>
+  </section>
   <a href="index.html" class="back-btn">← Back to Home</a>
 
   <footer>
